--- a/main/plugins/org.talend.hadoop.distribution.cdh5100/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh5100/plugin.xml
@@ -379,23 +379,23 @@
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh5100"
-            id="jackson-databind-2.2.3.jar"
-            name="jackson-databind-2.2.3.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-databind-2.2.3/6.1.0">
+            id="jackson-databind-2.5.4.redhat-2.jar"
+            name="jackson-databind-2.5.4.redhat-2.jar"
+            mvn_uri="mvn:org.talend.libraries/jackson-databind-2.5.4.redhat-2/6.0.0">
         </libraryNeeded>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh5100"
-            id="jackson-core-2.2.3.jar"
-            name="jackson-core-2.2.3.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-core-2.2.3/6.1.0">
+            id="jackson-core-2.5.4.jar"
+            name="jackson-core-2.5.4.jar"
+            mvn_uri="mvn:org.talend.libraries/jackson-core-2.5.4/6.0.0">
         </libraryNeeded>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh5100"
-            id="jackson-annotations-2.3.1"
-            name="jackson-annotations-2.3.1.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-annotations-2.3.1/6.1.0">
+            id="jackson-annotations-2.5.4"
+            name="jackson-annotations-2.5.4.jar"
+            mvn_uri="mvn:org.talend.libraries/jackson-annotations-2.5.4/6.0.0">
         </libraryNeeded>
 
         <libraryNeeded
@@ -1228,9 +1228,9 @@
              <library id="talend-spark-assembly-1.6.0-hadoop2.6.0-cdh5.10.1-with-hive-6.4.0" />
              <library id="jersey-server-1.14.jar" />
              <library id="jersey-servlet-1.14.jar" />
-             <library id="jackson-databind-2.3.1.jar" />
-             <library id="jackson-core-2.3.1.jar" />
-             <library id="jackson-annotations-2.3.1" />
+             <library id="jackson-databind-2.5.4.redhat-2.jar" />
+             <library id="jackson-core-2.5.4.jar" />
+             <library id="jackson-annotations-2.5.4" />
              <library id="snappy-java-1.0.4.1.jar"/>
              <library id="netty-3.10.5.Final.jar"/>
              <library id="parquet-hadoop-bundle-1.5.0-cdh5.10.1.jar"/>
@@ -1632,11 +1632,11 @@
              <library id="navigator-sdk-model-2.0-20160624" />
              <library id="spring-core-4.0.7.RELEASE"/>
              <library id="spring-web-4.0.7.RELEASE"/>
-             <library id="jackson-databind-2.2.3.jar"/>
-             <library id="jackson-annotations-2.3.1"/>
-             <library id="jackson-core-2.2.3.jar"/>
+             <library id="jackson-databind-2.5.4.redhat-2.jar"/>
+             <library id="jackson-annotations-2.5.4"/>
+             <library id="jackson-core-2.5.4.jar"/>
              <library id="commons-net-3.1"/>
-             <library id="jackson-datatype-joda-2.1.0"/>
+             <library id="jackson-datatype-joda-2.5.4"/>
              <library id="joda-time-2.5.jar"/>
              <library id="httpclient-4.5.2.jar"/>
         </libraryNeededGroup>
@@ -1649,8 +1649,8 @@
             <library id="kite-data-core-1.0.0-cdh5.10"/>
             <library id="kite-data-mapreduce-1.0.0-cdh5.10.jar"/>
             <library id="kite-hadoop-compatibility-1.0.0-cdh5.10"/>
-            <library id="jackson-databind-2.2.3.jar"/>
-            <library id="jackson-core-2.2.3.jar"/>
+            <library id="jackson-databind-2.5.4.redhat-2.jar"/>
+            <library id="jackson-core-2.5.4.jar"/>
             <library id="parquet-avro-1.5.0-cdh5.10.1"/>
         </libraryNeededGroup>
     </extension>
