--- a/main/plugins/org.talend.libraries.apache.kafka/plugin.xml
+++ b/main/plugins/org.talend.libraries.apache.kafka/plugin.xml
@@ -85,62 +85,62 @@
             
         <!-- Kafka 1.1.0 libraries -->
         <libraryNeeded
-            context="plugin:org.talend.libraries.apache.kafka"
+            context="plugin:org.apache.kafka"
             id="kafka_2.11-1.1.0.jar"
             name="kafka_2.11-1.1.0.jar"
-            mvn_uri="mvn:org.talend.libraries/kafka_2.11-1.1.0/6.0.0"/>
+            mvn_uri="mvn:org.apache.kafka/kafka_2.11/1.1.0"/>
         <libraryNeeded
-            context="plugin:org.talend.libraries.apache.kafka"
+            context="plugin:org.apache.kafka"
             id="kafka-clients-1.1.0.jar"
             name="kafka-clients-1.1.0.jar"
-            mvn_uri="mvn:org.talend.libraries/kafka-clients-1.1.0/6.0.0"/>
+            mvn_uri="mvn:org.apache.kafka/kafka-clients/1.1.0"/>
         <libraryNeeded
-            context="plugin:org.talend.libraries.apache.kafka"
+            context="plugin:org.scala-lang"
             id="scala-library-2.11.12.jar"
             name="scala-library-2.11.12.jar" 
-            mvn_uri="mvn:org.talend.libraries/scala-library-2.11.12/6.0.0"/>
+            mvn_uri="mvn:org.scala-lang/scala-library/2.11.12"/>
         <libraryNeeded
-            context="plugin:org.talend.libraries.apache.kafka"
+            context="plugin:com.typesafe.scala-logging"
             id="scala-logging-2.11-3.7.2.jar"
             name="scala-logging-2.11-3.7.2.jar" 
-            mvn_uri="mvn:org.talend.libraries/scala-logging-2.11-3.7.2/6.0.0"/>
+            mvn_uri="mvn:com.typesafe.scala-logging/scala-logging-2.11/3.7.2"/>
         <libraryNeeded
-            context="plugin:org.talend.libraries.apache.kafka"
+            context="plugin:org.xerial.snappy"
             id="snappy-java-1.1.7.1.jar"
             name="snappy-java-1.1.7.1.jar" 
-            mvn_uri="mvn:org.talend.libraries/snappy-java-1.1.7.1/6.0.0"/>
+            mvn_uri="mvn:org.xerial.snappy/snappy-java/1.1.7.1"/>
         <libraryNeeded
-            context="plugin:org.talend.libraries.apache.kafka"
+            context="plugin:com.101tec"
             id="zkclient-0.10.jar"
             name="zkclient-0.10.jar" 
-            mvn_uri="mvn:org.talend.libraries/zkclient-0.10/6.0.0"/>
+            mvn_uri="mvn:com.101tec/zkclient/0.10"/>
         <libraryNeeded
-            context="plugin:org.talend.libraries.apache.kafka"
+            context="plugin:org.talend.libraries"
             id="slf4j-log4j12-1.7.25.jar"
             name="slf4j-log4j12-1.7.25.jar" 
             mvn_uri="mvn:org.talend.libraries/slf4j-log4j12-1.7.25/6.0.0"/>
         <libraryNeeded
-            context="plugin:org.talend.libraries.apache.kafka"
+            context="plugin:org.talend.libraries"
             id="slf4j-api-1.7.25.jar"
             name="slf4j-api-1.7.25.jar" 
             mvn_uri="mvn:org.talend.libraries/slf4j-api-1.7.25/6.0.0"/>
         <libraryNeeded
-            context="plugin:org.talend.libraries.apache.kafka"
+            context="plugin:net.sf.jopt-simple"
             id="jopt-simple-5.0.4.jar"
             name="jopt-simple-5.0.4.jar" 
-            mvn_uri="mvn:org.talend.libraries/jopt-simple-5.0.4/6.0.0"/>
+            mvn_uri="mvn:net.sf.jopt-simple/jopt-simple/5.0.4"/>
         <libraryNeeded
-            context="plugin:org.talend.libraries.apache.kafka"
+            context="plugin:com.fasterxml.jackson.core"
             id="jackson-core-2.9.4.jar"
             name="jackson-core-2.9.4.jar" 
-            mvn_uri="mvn:org.talend.libraries/jackson-core-2.9.4/6.0.0"/>
+            mvn_uri="mvn:com.fasterxml.jackson.core/jackson-core/2.9.4"/>
         <libraryNeeded
-            context="plugin:org.talend.libraries.apache.kafka"
+            context="plugin:com.fasterxml.jackson.core"
             id="jackson-databind-2.9.4.jar"
             name="jackson-databind-2.9.4.jar" 
-            mvn_uri="mvn:org.talend.libraries/jackson-databind-2.9.4/6.0.0"/>
+            mvn_uri="mvn:com.fasterxml.jackson.core/jackson-databind/2.9.4"/>
         <libraryNeeded
-            context="plugin:org.talend.libraries.apache.kafka"
+            context="plugin:org.talend.libraries"
             id="jackson-annotations-2.9.4.jar"
             name="jackson-annotations-2.9.4.jar" 
             mvn_uri="mvn:org.talend.libraries/jackson-annotations-2.9.4/6.0.0"/>
