--- a/main/plugins/org.talend.hadoop.distribution.qubole/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.qubole/plugin.xml
@@ -44,13 +44,7 @@
             name="avro-mapred-1.7.7-hadoop2.jar"
             mvn_uri="mvn:org.apache.avro/avro-mapred/1.7.7-hadoop2"/>
 
-		<!-- Jars for DI Hive/Pig -->
-		<libraryNeeded
-			context="plugin:org.talend.hadoop.distribution.qubole"
-			id="parquet-pig-bundle-1.5.0-cdh5.12.1.jar"
-			name="parquet-pig-bundle-1.5.0-cdh5.12.1.jar"
-			mvn_uri="mvn:com.twitter/parquet-pig-bundle/1.5.0-cdh5.12.1">
-		</libraryNeeded>
+		<!-- Jars for DI Hive -->
 		<libraryNeeded
 			context="plugin:org.talend.hadoop.distribution.qubole"
 			id="avro-1.7.6.jar"
@@ -361,26 +355,7 @@
             <library id="joda-time-2.8.1.jar" />
         </libraryNeededGroup>
 
-        <!-- Pig parquet loader/storer group -->
-        <libraryNeededGroup description="Pig parquet loader/storer libraries for Qubole" id="PIG-PARQUET-LIB-QUBOLE" name="PIG-PARQUET-LIB-QUBOLE">
-            <library id="parquet-pig-bundle-1.5.0.jar" />
-            <library id="parquet-pig-1.5.0.jar" />
-        </libraryNeededGroup>
-
-        <!-- Pig avro loader/storer group -->
-        <libraryNeededGroup description="Pig avro loader/storer libraries for Qubole" id="PIG-AVRO-LIB-QUBOLE" name="PIG-AVRO-LIB-QUBOLE">
-            <library id="piggybank-cdh5.4.jar"/>
-            <library id="avro-1.7.6.jar"/>
-        </libraryNeededGroup>
-
-        <!-- Pig sequence file loader/storer group -->
-        <libraryNeededGroup description="Pig SequenceFile libraries for Qubole" id="PIG-SEQUENCEFILE-LIB-QUBOLE" name="PIG-SEQUENCEFILE-LIB-QUBOLE">
-            <library id="elephant-bird-core-4.9.jar"/>
-            <library id="elephant-bird-hadoop-compat-4.9.jar"/>
-            <library id="elephant-bird-pig-4.9.jar"/>
-            <library id="pigutil.jar"/>
-        </libraryNeededGroup>
-
+        
         <!-- Pig RCFile loader/storer group -->
         <libraryNeededGroup description="Pig RCFile libraries for Qubole" id="PIG-RCFILE-LIB-QUBOLE" name="PIG-RCFILE-LIB-QUBOLE">
             <library id="hive-common-1.1.0.jar"/>
