--- a/main/plugins/org.talend.designer.components.bigdata/components/tSAPHanaOutput/tSAPHanaOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSAPHanaOutput/tSAPHanaOutput_messages.properties
@@ -84,3 +84,4 @@ TABLE_TYPE.ITEM.COLUMN=Column
 TABLE_TYPE.ITEM.HISTORY_COLUMN=History column
 TABLE_TYPE.ITEM.GLOBAL_TEMPORARY=Global temporary
 TABLE_TYPE.ITEM.LOCAL_TEMPORARY=Local temporary
+USE_ALTERNATE_SCHEMA.NAME=Use alternative schema
