--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
         <module>main/plugins/org.talend.libraries.hcatalog</module>
         <module>main/plugins/org.talend.libraries.mongo</module>
         <module>main/plugins/org.talend.libraries.neo4j</module>
+	<module>main/plugins/org.talend.libraries.pig</module>
         <module>main/plugins/org.talend.libraries.s3</module>
         <module>main/plugins/org.talend.libraries.sdsulib</module>
         <module>main/plugins/org.talend.libraries.sqoop</module>
