--- a/main/plugins/org.talend.hadoop.distribution.hdinsight400/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdinsight400/plugin.xml
@@ -6,7 +6,7 @@
          <!-- hd insight common libraries -->
         <libraryNeeded
                 context="plugin:org.talend.hadoop.distribution.hdinsight400"
-                id="javax.ws.rs-api-2.1.jar"
+                id="javax.ws.rs-api-2.1"
                 name="javax.ws.rs-api-2.1.jar"
                 mvn_uri="mvn:javax.ws.rs/javax.ws.rs-api/2.1">
         </libraryNeeded>
@@ -20,20 +20,20 @@
         </libraryNeeded>
         <libraryNeeded
                 context="plugin:org.talend.hadoop.distribution.hdinsight400"
-                id="azure-storage-7.0.0.jar"
+                id="azure-storage-7.0.0"
                 name="azure-storage-7.0.0.jar"
                 mvn_uri="mvn:com.microsoft.azure/azure-storage/7.0.0">
         </libraryNeeded>
         <libraryNeeded
                 context="plugin:org.talend.hadoop.distribution.hdinsight400"
-                id="jackson-core-2.9.6.jar"
+                id="jackson-core-2.9.6"
                 name="jackson-core-2.9.6.jar"
                 mvn_uri="mvn:com.fasterxml.jackson.core/jackson-core/2.9.6"
                 uripath="platform:/plugin/org.talend.libraries.jackson/lib/jackson-core-2.9.6.jar">
         </libraryNeeded>
         <libraryNeeded
                 context="plugin:org.talend.hadoop.distribution.hdinsight400"
-                id="jackson-databind-2.9.6.jar"
+                id="jackson-databind-2.9.6"
                 name="jackson-databind-2.9.6.jar"
                 mvn_uri="mvn:org.talend.libraries/jackson-databind-2.9.6/6.0.0"
                 uripath="platform:/plugin/org.talend.libraries.jackson/lib/jackson-databind-2.9.6.jar">
@@ -386,11 +386,11 @@
                 description="HD Insight common libraries"
                 id="HD_INSIGHT_4_0_0_COMMON_LIBRARIES"
                 name="HD_INSIGHT_4_0_0_COMMON_LIBRARIES">
-            <library id="javax.ws.rs-api-2.1.jar"/>
+            <library id="javax.ws.rs-api-2.1"/>
             <library id="wsdl4j-1.6.3.jar"/>
-            <library id="azure-storage-7.0.0.jar"/>
-            <library id="jackson-core-2.9.6.jar"/>
-            <library id="jackson-databind-2.9.6.jar"/>
+            <library id="azure-storage-7.0.0"/>
+            <library id="jackson-core-2.9.6"/>
+            <library id="jackson-databind-2.9.6"/>
             <library id="jackson-core-asl-1.9.14-TALEND"/>
             <library id="commons-logging-1.1.3"/>
             <library id="commons-lang-2.6"/>
