--- a/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
@@ -298,9 +298,9 @@
         <!-- Sqoop libraries -->
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
-            id="parquet-sqoop-1.4.7.jar"
-            name="parquet-sqoop-1.4.7.jar"
-            mvn_uri="mvn:org.talend.libraries/parquet-sqoop-1.4.7/6.0.0"/>
+            id="sqoop-1.4.7.jar"
+            name="sqoop-1.4.7.jar"
+            mvn_uri="mvn:org.apache.sqoop/sqoop/1.4.7"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
@@ -1986,6 +1986,13 @@
                 id="SQOOP-LIB-EMR_5_15_0_LATEST"
                 name="SQOOP-LIB-EMR_5_15_0_LATEST">
             <library id="commons-lang3-3.5.jar"/>
+        </libraryNeededGroup>
+
+        <!-- Sqoop Avro group -->
+        <libraryNeededGroup
+                description="Sqoop Avro libraries for EMR 5.15.0"
+                id="SQOOP-AVRO-LIB-EMR_5_15_0_LATEST"
+                name="SQOOP-AVRO-LIB-EMR_5_15_0_LATEST">
             <library id="avro-sqoop-uber.jar"/>
         </libraryNeededGroup>
 
@@ -2007,7 +2014,7 @@
             <library id="parquet-encoding-1.6.0.jar" />
             <library id="parquet-format-2.2.0-rc1.jar" />
             <library id="parquet-avro-1.6.0.jar"/>
-            <library id="parquet-sqoop-1.4.7.jar"/>
+            <library id="sqoop-1.4.7.jar"/>
         </libraryNeededGroup>
         
         <!-- Spark Parquet group MRREQUIRED -->
@@ -2018,6 +2025,7 @@
              <library id="parquet-avro-1.8.2-shaded.jar"/>
              <library id="parquet-hadoop-bundle-1.6.0.jar" />
              <library id="jodd-core-3.5.2.jar" />
+            <library id="sqoop-1.4.7.jar"/>
         </libraryNeededGroup>
         
         <!-- Spark Kafka group MRREQUIRED -->
